jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
spec:
  rules:
    - host: db.cnecloud.com
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 8080
